// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunList displays error in run row if it failed to parse (run list mask) 1`] = `
<div>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 2,
          "label": "Run name",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 0.5,
          "label": "Status",
        },
        Object {
          "flex": 0.5,
          "label": "Duration",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Pipeline",
        },
        Object {
          "flex": 1,
          "label": "Start time",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="No runs found."
    orderAscending={false}
    pageSize={10}
    reload={[Function]}
    rows={
      Array [
        Object {
          "error": undefined,
          "id": undefined,
          "otherFields": Array [
            undefined,
            "-",
            "-",
            undefined,
            undefined,
            "-",
          ],
        },
        Object {
          "error": undefined,
          "id": undefined,
          "otherFields": Array [
            undefined,
            "-",
            "-",
            undefined,
            undefined,
            "-",
          ],
        },
      ]
    }
    sortBy="created_at"
  />
</div>
`;

exports[`RunList displays error in run row if it failed to parse 1`] = `
<div>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 2,
          "label": "Run name",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 0.5,
          "label": "Status",
        },
        Object {
          "flex": 0.5,
          "label": "Duration",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Pipeline",
        },
        Object {
          "flex": 1,
          "label": "Start time",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="No runs found."
    orderAscending={false}
    pageSize={10}
    reload={[Function]}
    rows={
      Array [
        Object {
          "error": "Unexpected token b in JSON at position 0",
          "id": "testrun1",
          "otherFields": Array [
            "test run1",
            "-",
            "-",
            undefined,
            undefined,
            "-",
          ],
        },
      ]
    }
    sortBy="created_at"
  />
</div>
`;

exports[`RunList loads all runs 1`] = `
<div>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 2,
          "label": "Run name",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 0.5,
          "label": "Status",
        },
        Object {
          "flex": 0.5,
          "label": "Duration",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Pipeline",
        },
        Object {
          "flex": 1,
          "label": "Start time",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="No runs found."
    orderAscending={false}
    pageSize={10}
    reload={[Function]}
    rows={
      Array [
        Object {
          "error": undefined,
          "id": "testrun1",
          "otherFields": Array [
            "test run1",
            "-",
            "-",
            undefined,
            undefined,
            "-",
          ],
        },
      ]
    }
    sortBy="created_at"
  />
</div>
`;

exports[`RunList loads runs for a given experiment id 1`] = `
<div>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 2,
          "label": "Run name",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 0.5,
          "label": "Status",
        },
        Object {
          "flex": 0.5,
          "label": "Duration",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Pipeline",
        },
        Object {
          "flex": 1,
          "label": "Start time",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="No runs found for this experiment."
    orderAscending={false}
    pageSize={10}
    reload={[Function]}
    rows={
      Array [
        Object {
          "error": undefined,
          "id": "testRun1",
          "otherFields": Array [
            undefined,
            "-",
            "-",
            undefined,
            undefined,
            "-",
          ],
        },
      ]
    }
    sortBy="created_at"
  />
</div>
`;

exports[`RunList renders the empty experience 1`] = `
<div>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 2,
          "label": "Run name",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 0.5,
          "label": "Status",
        },
        Object {
          "flex": 0.5,
          "label": "Duration",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Pipeline",
        },
        Object {
          "flex": 1,
          "label": "Start time",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="No runs found."
    orderAscending={false}
    pageSize={10}
    reload={[Function]}
    rows={Array []}
    sortBy="created_at"
  />
</div>
`;

exports[`RunList shows run time for each run 1`] = `
<div>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 2,
          "label": "Run name",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 0.5,
          "label": "Status",
        },
        Object {
          "flex": 0.5,
          "label": "Duration",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Experiment",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "Pipeline",
        },
        Object {
          "flex": 1,
          "label": "Start time",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="No runs found."
    orderAscending={false}
    pageSize={10}
    reload={[Function]}
    rows={
      Array [
        Object {
          "error": undefined,
          "id": "testrun1",
          "otherFields": Array [
            "test run1",
            "-",
            "1:01:01",
            undefined,
            undefined,
            "-",
          ],
        },
      ]
    }
    sortBy="created_at"
  />
</div>
`;
